--- a/styles/all.css
+++ b/styles/all.css
@@ -4,7 +4,7 @@ html {
 
 body {
     margin: 0; 
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: 'Chelsea Market', cursive;
 }
 
 ul {
