--- a/styles/all.css
+++ b/styles/all.css
@@ -27,7 +27,7 @@ ul {
   }
 
   li a {
-    color: white;
+    color:black;
     text-align: center;
     padding: 26px;
     text-decoration: none;
