--- a/styles/all.css
+++ b/styles/all.css
@@ -74,6 +74,15 @@ li a {
   flex-direction: column; 
 }
 
+.column {
+  display: flex;
+  flex-direction: column; 
+}
+
+.chart_box {
+  display: flex; 
+  flex-direction: row; 
+}
 p {
   margin: 7%; 
   margin-top: 3%;
@@ -144,7 +153,7 @@ li:hover {
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 58%; 
+  top: 39%; 
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -214,4 +223,10 @@ li:hover {
 
 .innernav{
   margin-left: 25%; 
+}
+
+span {
+  margin: 0px; 
+  border: solid 1px; 
+  padding: 10px; 
 }
