--- a/styles/all.css
+++ b/styles/all.css
@@ -82,19 +82,50 @@ li a {
 .chart_box {
   display: flex; 
   flex-direction: row; 
+  margin-left: 10%;
+  margin-right: 10%; 
 }
+
+.chart_wrap {
+background-color: white; 
+border-radius: 18px; 
+margin: 5%; 
+margin-bottom: 20%; 
+padding-top: 2%;
+margin-top: 0%; 
+margin-bottom: 1%; 
+padding-bottom: 4%;  
+
+}
+
 p {
-  margin: 7%; 
+  margin: 5%; 
   margin-top: 3%;
   padding: 3%; 
   background-color: white; 
   border: #1b1b61; 
   border-radius: 18px; 
+  font-size: 16px; 
+  font-family: serif; 
 }
 
-h2{
+.purpose {
+  font-size: 24px;
+ 
+}
+
+h2 {
   margin-left: 5%; 
 }
+
+h3{
+  margin-left: 5%; 
+}
+
+.header_h4 {
+  margin-left: 5%; 
+}
+
 
 li:hover {
   cursor: pointer;
@@ -143,7 +174,7 @@ li:hover {
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  /* padding: 14px 16px; */
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -165,7 +196,7 @@ li:hover {
   float: none;
   background-color: #1b1b61; 
   color: white;
-  padding: 12px 16px;
+  /* padding: 12px 16px; */
   text-decoration: none;
   display: block;
   text-align: left;
@@ -229,4 +260,5 @@ span {
   margin: 0px; 
   border: solid 1px; 
   padding: 10px; 
+  padding-right: 50px; 
 }
