--- a/styles/all.css
+++ b/styles/all.css
@@ -305,7 +305,7 @@ li:hover {
 }
 
 .innernav{
-  margin-left: 15%; 
+  margin-left: 25%; 
 }
 
 span {
@@ -322,4 +322,15 @@ img {
   margin-left: 7%;
   margin-right: 7%;  
   
+}
+
+button {
+  background-color: #1b1b61;
+  color: white; 
+  font-family: 'Chelsea Market', cursive; 
+  border-radius: 5%; 
+  font-size: 100%;  
+  padding: 15%; 
+ margin: 20px; 
+
 }
