--- a/styles/all.css
+++ b/styles/all.css
@@ -26,9 +26,18 @@ ul .nav{
 }
 
 ul li .navli {
+  list-style-type: none; 
   display: inline-block;
   height: 40px;  
   padding-top: 15px; 
+}
+
+ul {
+  list-style-type: none; 
+}
+
+ul li {
+  font-size: 24px; 
 }
  
 ol {
@@ -177,6 +186,9 @@ p {
 }
 
 h2 {
+  margin-top: 4%; 
+  margin-bottom: 0%; 
+  font-size: 30px; 
   margin-left: 5%; 
 }
 
@@ -264,7 +276,6 @@ li:hover {
   float: none;
   background-color: #1b1b61; 
   color: white;
-  /* padding: 12px 16px; */
   text-decoration: none;
   display: block;
   text-align: left;
@@ -339,6 +350,7 @@ img {
 }
 
 .purpose2 {
+  margin-top: 0; 
   font-size: 25px; 
 }
 
@@ -368,22 +380,45 @@ img {
 }
 
 button {
-  width: 250px;
-  height: 250px; 
-  margin: 2.4%;   
-  margin-bottom: 10%; 
+  padding: 4% 0% 4% 0%; 
   background-color: white; 
+  margin: 6%; 
   border: 5px solid #c7e6ed; 
   border-radius: 8%; 
-  font-size: 20px; 
+  font-size: large; 
 }
 
 
 button img {
-max-width:  50%;
-max-height: 50%;   
+max-width:  60%;
+max-height: 60%;   
  } 
 
- #guidebutt {
-   margin-left: 5%; 
+  
+ footer{
+  height: 70px; 
+  padding: 2%; 
+  background-color: #1b1b61;
+  color: white; 
+  border: 3px black solid; 
+  border-left-style: hidden;
+  border-right-style: hidden; 
  }
+
+
+.button_holder {
+  display: flex; 
+  flex-direction: row; 
+  margin-left: 2%;
+  margin-right: 2%; 
+  justify-content: space-evenly; 
+}
+
+.button_holder2 {
+  display: flex; 
+  flex-direction: row; 
+  margin-left: 2%;
+  margin-right: 2%; 
+  margin-bottom: 10%; 
+  justify-content: space-evenly; 
+}
