--- a/styles/all.css
+++ b/styles/all.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0; 
   font-family: sans-serif; 
-  overflow-x:hidden; 
+  overflow-x: hidden; 
 }
 
 .mainWrapper {
@@ -35,8 +35,8 @@ ul .nav{
 ul li .navli {
   list-style-type: none; 
   display: inline-block;
-  height: 40px;  
-  padding-top: 15px; 
+  height: 2.5rem;  
+  padding-top: 0.938rem; 
 }
 
 ul {
@@ -44,12 +44,12 @@ ul {
 }
 
 ul li {
-  font-size: 24px; 
+  font-size: 1.5rem; 
 }
  
 ol {
   background-color: white;
-  border-radius: 18px; 
+  border-radius: 1.125rem; 
 }
 
 .illness{
@@ -64,7 +64,7 @@ ol li {
 li a {
   color: white;
   text-align: center;
-  padding: 26px;
+  padding: 1.625rem;
   text-decoration: none;
 }
 
@@ -84,13 +84,14 @@ li a {
   margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
-  margin-top: 2%; 
-  border: 4px solid black; 
+  margin-top: 2.5%; 
+  padding: 0.25rem; 
+  border: 0.25rem solid black; 
   border-radius: 0px; 
 }
 
 .title {
-  font-size: 60px; 
+  font-size: 3.75rem; 
   display: block;
   margin-left: 0;
   margin-right: auto;
@@ -98,7 +99,7 @@ li a {
 }
 
 .title2 {
-  font-size: 32px; 
+  font-size: 2rem; 
   display: block;
   margin-left: 0;
   margin-right: auto;
@@ -113,7 +114,7 @@ li a {
 
 .row2{
   display: flex;
-  padding: 50px; 
+  padding: 3.125rem; 
   flex-direction: row;
 }
 
@@ -134,7 +135,7 @@ li a {
 }
 
  .purpose2 {
-  font-size: 25px; 
+  font-size: 1.563rem; 
   margin: 5%; 
   padding: 3%; 
   margin-top: 0;  
@@ -142,7 +143,7 @@ li a {
 
 
 .purpose {
-  font-size: 34px;
+  font-size: 2.125rem;
   margin: 3%; 
   margin-left: 12%; 
   padding: 0; 
@@ -152,20 +153,17 @@ li a {
 h2 {
   margin-top: 4%; 
   margin-bottom: 0%; 
-  font-size: 30px; 
+  font-size: 1.875rem; 
   margin-left: 5%; 
 }
 
-h3{
+h3 {
   margin-bottom: 3%; 
 }
-h4{
-  margin-left: 5%; 
-}
-.header_h4 {
-  margin-left: 5%; 
-}
 
+h4 {
+  margin-left: 5%; 
+}
 
 li:hover {
   cursor: pointer;
@@ -177,11 +175,9 @@ li:hover {
   overflow: hidden;
   padding: 1%; 
   margin-top: 0%; 
-  border: 3px black solid; 
+  border: 0.188rem black solid; 
   border-left-style: hidden;
   border-right-style: hidden; 
-
- 
 }
 
 /* Style the links inside the navigation bar */
@@ -192,7 +188,7 @@ li:hover {
   text-align: center;
   text-decoration: none;
   font-size: 130%;
-  padding: 16px; 
+  padding: 1rem; 
 }
 
 /* Add an active class to highlight the current page */
@@ -214,11 +210,10 @@ li:hover {
 
 /* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-  font-size: 17px; 
+  font-size: 1rem; 
   border: none;
   outline: none;
   color: white;
-  /* padding: 14px 16px; */
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -227,11 +222,10 @@ li:hover {
 /* Style the dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
-  position: absolute;
-  top: 43%; 
+  position: absolute; 
   background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  min-width: 10rem;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
   z-index: 1;
 }
 
@@ -296,27 +290,27 @@ li:hover {
 }
 
 .innernav{
-  margin-left: 23.5%; 
+  margin-left: 24%; 
 }
 
 span {
   margin: 0px; 
   border: solid 1px; 
-  padding: 10px; 
-  padding-right: 50px; 
+  padding: 0.625rem; 
+  padding-right: 3.125rem; 
 }
 
 .bioimg {
-  max-height: 260px; 
-  padding: 15px;   
+  max-height: 16.25rem; 
+  padding: 1rem;   
 }
 
 img {
-  padding: 15px;
+  padding: 1rem;
 }
 
 .bioimg:hover { 
-  border: 3px solid #1b1b61; 
+  border: 0.188rem solid #1b1b61; 
 } 
 
 figure {
@@ -331,40 +325,35 @@ figcaption {
 .bio {
   width: 75%; 
   padding: 0px; 
-  font-size: 18px;
+  font-size: 1.125rem;
 }
 
 .container {
   display: flex;
   flex-direction: row; 
-  /* float: left;  */
-  /* width: 300px; */
   margin: 1.5%;  
   margin-left: 4%; 
   margin-right: 4%;  
   padding: 3%; 
-  /*padding-bottom: 3%; 
-  padding-top: 3%;  */
-  /* margin: 2%;  */
-  border: 2px solid #c7e6ed; 
+  border: 0.125rem solid #c7e6ed; 
 }
 
 button {
   padding: 10% 0% 10% 0%; 
   background-color: white; 
   margin: 6%; 
-  border: 5px solid #c7e6ed; 
+  border: 0.313rem solid #c7e6ed; 
   border-radius: 8%; 
   font-size: large; 
   font-family: sans-serif; 
 }
   
  footer{
-  height: 70px; 
+  height: 4.375rem; 
   padding: 2%; 
   background-color: #1b1b61;
   color: white; 
-  border: 3px black solid; 
+  border: 0.188rem black solid; 
   border-left-style: hidden;
   border-right-style: hidden; 
  }
@@ -399,7 +388,7 @@ table, th, td {
 }
 
 th, td {
-  padding: 5px; 
+  padding: 0.313rem; 
 }
 
 table {
