--- a/styles/all.css
+++ b/styles/all.css
@@ -77,25 +77,11 @@ li a {
   background-color: white; 
 }
 
-.logo {
-  display: block; 
-  max-width: 19%;
-  height: auto; 
-  margin: auto; 
-  margin-left: 3%; 
-  margin-right: 2%;
-  margin-top: 2.5%; 
-  padding: 0.25rem; 
-  border: 0.25rem solid black; 
-  border-radius: 0px; 
-}
-
 .title {
   font-size: 3.75rem; 
   display: block;
   margin-left: 0;
   margin-right: auto;
-  margin-top: 3%; 
 }
 
 .title2 {
@@ -129,9 +115,28 @@ li a {
 .sidebyside{
   display: flex;
   flex-direction: row;
-  background-color:#c7e6ed; 
   padding-bottom: 2%; 
   padding-top: 2%;
+}
+
+.stack {
+  display: flex; 
+  background-color:#c7e6ed; 
+  flex-direction: column; 
+  align-items: left; 
+  justify-content: center;
+}
+
+.logo {
+  display: block; 
+  max-width: 19%;
+  height: auto; 
+  margin: auto; 
+  margin-left: 3%; 
+  margin-right: 2%;
+  padding: 0.25rem; 
+  border: 0.25rem solid black; 
+  border-radius: 0px; 
 }
 
  .purpose2 {
