--- a/styles/all.css
+++ b/styles/all.css
@@ -8,6 +8,10 @@ body {
   overflow-x: hidden; 
 }
 
+p{
+  font-size: 1.25rem;
+}
+
 .mainWrapper {
   margin: 5%; 
   padding: 2%; 
@@ -130,7 +134,7 @@ li a {
 
 .logo {
   display: block; 
-  max-width: 19%;
+  max-width: 20%;
   height: auto; 
   margin: auto; 
   margin-left: 3%; 
@@ -164,7 +168,11 @@ h2 {
 }
 
 h3 {
-  margin-bottom: 3%; 
+  margin-top: 5%; 
+}
+
+.top {
+  margin-top: 2%; 
 }
 
 h4 {
@@ -379,7 +387,6 @@ button {
   border-right-style: hidden; 
  }
 
- 
 button img {
   max-width:  50%;
   max-height: 30%;   
@@ -403,9 +410,18 @@ button img {
   justify-content: center; 
 }
 
+.button_holder4 {
+  display: flex; 
+  flex-direction: row; 
+  margin-left: 30%;
+  margin-right: 30%; 
+  justify-content: center; 
+}
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  font-size: 1.25rem; 
 }
 
 th, td {
