--- a/styles/all.css
+++ b/styles/all.css
@@ -371,7 +371,8 @@ button {
 
 button img {
   max-width:  50%;
-  max-height: 30%;   
+  max-height: 30%;  
+  min-height: 30%;  
   cursor: pointer; 
    } 
 
@@ -436,5 +437,47 @@ ul li{
     
   @media screen and (max-width: 700px) {
       .mainWrapper {
-        font-size: 1.5rem;  
+        font-size: 1.25rem;  
+      }
+      .title {
+        font-size: 1.25rem;
+
+      }
+
+      .title2 {
+        font-size: .75rem;
+      }
+
+      .topnav a{
+        font-size: 0.75rem;
+        padding: 0.5rem; 
+      }
+
+      .purpose {
+        font-size: 1.25rem; 
+      }
+
+      .purpose2 {
+        font-size: 1rem; 
+      }
+    
+      h2 {
+        font-size: 1.25rem; 
+      }
+
+      /* img {
+        max-width: 5rem; 
+        max-height: 5rem; 
+      } */
+
+      .row2{
+        flex-direction: column;
+        align-items: center;
+      }
+
+
+      button {
+        font-size: .75rem; 
+      }
+
     }
