--- a/styles/all.css
+++ b/styles/all.css
@@ -424,6 +424,10 @@ ul li{
         overflow-x: hidden;  
       }
 
+      .title {
+        font-size: 1.45rem;
+      }
+
       .title2 {
         font-size: .75rem;
       }
@@ -443,6 +447,7 @@ ul li{
       .row2{
         flex-direction: column;
         align-items: center;
+        padding: 0px; 
       }
 
       button {
