--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color:greenyellow; 
+  background-color: #c7e6ed; 
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -121,6 +121,7 @@ ol li {
 .logo {
   display: block; 
   max-width: 20%;
+  height: auto; 
   margin-left: 3%; 
   margin-right: 2%;
   padding: 0.1rem; 
