--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: #c7e6ed; 
+  background-color: blue; 
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -122,6 +122,7 @@ ol li {
   display: block; 
   max-width: 20%;
   height: auto; 
+  width: auto; 
   margin-left: 3%; 
   margin-right: 2%;
   padding: 0.1rem; 
