--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: blue; 
+  background-color: purple; 
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -122,10 +122,10 @@ ol li {
   display: block; 
   max-width: 20%;
   height: auto; 
-  width: auto; 
+  margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
-  padding: 0.1rem; 
+  padding: 0.25rem; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
 }
