--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: purple; 
+  background-color: pink; 
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -125,7 +125,7 @@ ol li {
   margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
-  padding: 0.25rem; 
+  margin-top: 0; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
 }
