--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: yellow;  
+  background-color: orange;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -125,7 +125,8 @@ ol li {
   margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
-  margin-top: 0; 
+  margin-top: 0.5%; 
+  margin-bottom: 0.5%
   padding: 0.25rem; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
