--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: orange;  
+  background-color: teal;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -122,11 +122,10 @@ ol li {
   display: block; 
   max-width: 20%;
   height: auto; 
-  margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
   margin-top: 0.5%; 
-  margin-bottom: 0.5%
+  margin-bottom: 0.5%; 
   padding: 0.25rem; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
