--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: green;  
+  background-color: pink;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
