--- a/styles/all.css
+++ b/styles/all.css
@@ -122,6 +122,8 @@ ol li {
 .logo {
   display: block; 
   max-width: 20%; 
+  height: auto;
+  margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
   margin-top: 0.5%; 
