--- a/styles/all.css
+++ b/styles/all.css
@@ -112,17 +112,21 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: lavender;  
+  background-color: lime;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
 }
 
+.stackleft {
+  display: flex; 
+  flex-direction: column; 
+  max-width: 30%; 
+}
+
 
 .logo {
   display: block; 
-  max-width: 20%; 
-  height: auto;
   margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
