--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: yellow;  
+  background-color: orange;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -121,13 +121,14 @@ ol li {
 .stackleft {
   display: flex; 
   flex-direction: column; 
-  max-width: 30%; 
-  max-height: 30%; 
+  width: 30%; 
 }
 
 
 .logo {
   display: block; 
+  max-width: 95%;
+  height: auto; 
   margin: auto; 
   margin-left: 3%; 
   margin-right: 2%;
