--- a/styles/all.css
+++ b/styles/all.css
@@ -112,7 +112,7 @@ ol li {
 
 .stack {
   display: flex; 
-  background-color: orange;  
+  background-color: lightblue;  
   flex-direction: column; 
   align-items: left; 
   /* justify-content: center; */
@@ -130,8 +130,8 @@ ol li {
   max-width: 95%;
   height: auto; 
   margin: auto; 
-  margin-left: 3%; 
-  margin-right: 2%;
+  margin-left: 4%; 
+  margin-right: 3%;
   margin-top: 0.5%; 
   margin-bottom: 0.5%; 
   padding: 0.25rem; 
