--- a/styles/all.css
+++ b/styles/all.css
@@ -68,7 +68,7 @@ ol li {
 }
 
 .title {
-  font-size: 3.75rem; 
+  font-size: 3.5rem; 
   font-weight: bold;
   display: block;
   margin-left: 0;
@@ -108,6 +108,8 @@ ol li {
   flex-direction: row;
   padding-top: 3rem;
   padding-bottom: 2rem; 
+  align-items: center; 
+  margin-left: 2%; 
 }
 
 .stack {
@@ -115,25 +117,22 @@ ol li {
   background-color: lightblue;  
   flex-direction: column; 
   align-items: left; 
-  /* justify-content: center; */
 }
 
 .stackleft {
   display: flex; 
   flex-direction: column; 
-  width: 30%; 
+  align-items: left; 
+  justify-content: center;
+  width: 25%; 
 }
 
 
 .logo {
   display: block; 
-  max-width: 95%;
+  max-width: 100%; 
   height: auto; 
-  margin: auto; 
-  margin-left: 4%; 
-  margin-right: 3%;
-  margin-top: 0.5%; 
-  margin-bottom: 0.5%; 
+  margin: 1% 3%; 
   padding: 0.25rem; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
@@ -281,7 +280,7 @@ li:hover {
 
 
 .innernav{
-  margin-left: 24%; 
+  margin-left: 10%; 
 }
 
 span {
@@ -409,7 +408,7 @@ ul li{
 }
   */
 
-  @media screen and (max-width: 1000px) {
+@media screen and (max-width: 1px) {
     .title {
       font-size: 2.5rem;  
     }
@@ -419,8 +418,16 @@ ul li{
       padding: 0.5rem; 
     }
 
-    .innernav{
-      margin-left:26%; 
+  }
+
+  @media screen and (max-width: 1000px) {
+    .title {
+      font-size: 2.5rem;  
+    }
+
+    .topnav a{
+      font-size: 1rem;
+      padding: 0.5rem; 
     }
 
   }
@@ -474,8 +481,8 @@ ul li{
       }
 
       .sidebyside{
-        padding-top: 1%;
-        padding-bottom: 1%; 
+        padding-top: 2%;
+        padding-bottom: 1.5%; 
       }
     }
 
