--- a/styles/all.css
+++ b/styles/all.css
@@ -2,6 +2,7 @@ html {
   margin: 0; 
 }
 
+
 body {
   margin: 0; 
   font-family: sans-serif; 
@@ -104,12 +105,13 @@ ol li {
 }
 
 .sidebyside{
+  width: 100%; 
   display: flex;
   flex-direction: row;
   padding-top: 3rem;
   padding-bottom: 2rem; 
   align-items: center; 
-  margin-left: 2%; 
+  padding-left: 2%; 
 }
 
 .stack {
@@ -117,22 +119,28 @@ ol li {
   background-color: lightblue;  
   flex-direction: column; 
   align-items: left; 
+  overflow-x: hidden; 
 }
-
-.stackleft {
+ .stackleft {
   display: flex; 
   flex-direction: column; 
   align-items: left; 
   justify-content: center;
   width: 25%; 
+} 
+
+.stackright {
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center;
+  margin-left: 1%; 
+  margin-right: 2%; 
 }
 
-
 .logo {
-  display: block; 
-  max-width: 100%; 
+  display: block;  
+  max-width: 200px; 
   height: auto; 
-  margin: 1% 3%; 
   padding: 0.25rem; 
   border: 0.25rem solid black; 
   border-radius: 0px; 
@@ -184,6 +192,8 @@ li:hover {
   border: 0.188rem black solid; 
   border-left-style: hidden;
   border-right-style: hidden; 
+  justify-content: center;
+  align-items: center;
 }
 
 /* Style the links inside the navigation bar */
@@ -278,13 +288,12 @@ li:hover {
   font-size: 1.5rem;  
 }
 
-
 .innernav{
-  margin-left: 10%; 
+  margin-left: 14.2rem; 
 }
 
 span {
-  margin: 0px; 
+  margin: 0px;
   border: solid 1px; 
   padding: 0.625rem; 
   padding-right: 3.125rem; 
@@ -408,21 +417,9 @@ ul li{
 }
   */
 
-@media screen and (max-width: 1px) {
-    .title {
-      font-size: 2.5rem;  
-    }
-
-    .topnav a{
-      font-size: 1rem;
-      padding: 0.5rem; 
-    }
-
-  }
-
   @media screen and (max-width: 1000px) {
     .title {
-      font-size: 2.5rem;  
+      font-size: 2rem;  
     }
 
     .topnav a{
@@ -438,6 +435,11 @@ ul li{
         overflow-x: hidden;  
       }
 
+      .logo {
+        max-width: 25%; 
+      }
+
+        
       .title {
         font-size: 1.45rem;
       }
